-Mudanças no método register: verificação se eletronicPointsListById é vazia -Mudança de paramêtros no método replace - Verificação se todos os registros estão completos dependendo do regime da classe registerExistingEletronicPoint - Adição de Registro novo do método applyPedingStatus